[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "claude-cloud-ru-proxy"
version = "0.1.0"
description = "Anthropic Messages API proxy for Claude Code backed by Cloud.ru Foundation Models."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12,<1.0.0",
  "httpx>=0.28.0,<1.0.0",
  "pydantic>=2.10.0,<3.0.0",
  "tiktoken>=0.9.0,<1.0.0",
  "uvicorn>=0.34.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=9.0.3,<10.0.0",
]

[project.scripts]
claude-cloud-proxy = "claude_cloud_proxy.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_cloud_proxy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
